Solucionados los conflictos en la rama main

--- a/olimpia.html
+++ b/olimpia.html
@@ -16,10 +16,10 @@
   <body>
     <header>
       <div class="static-image">
-        <img src="archivos/imagenes/workout1.jpg" alt="" />
+        <img src="assets/images/workout1.jpg" alt="" />
       </div>
       <img
-        src="archivos/logos_e_iconos/logoExample.png"
+        src="assets/icons/logoExample.png"
         alt="logoExample"
         id="logoExample"
       />
@@ -30,7 +30,7 @@
     </section>
     <main>
       <div id="contain-1">
-        <img src="archivos/imagenes/workout2.jpg" alt="image" />
+        <img src="assets/images/workout2.jpg" alt="image" />
         <div class="contain-text">
           <h1>INNOV8</h1>
           <p>
@@ -57,7 +57,7 @@
       <div class="contain">
         <div class="info-contain">
           <div class="icon-title">
-            <img src="archivos/svg/club.svg" alt="icon" />
+            <img src="assets/svg/club.svg" alt="icon" />
             <h1>Asesoría a Clubes</h1>
           </div>
           <p>
@@ -69,7 +69,7 @@
         </div>
         <div class="info-contain">
           <div class="icon-title">
-            <img src="archivos/svg/player.svg" alt="icon" />
+            <img src="assets/svg/player.svg" alt="icon" />
             <h1>Promoción de Jugador</h1>
           </div>
           <p>
@@ -81,7 +81,7 @@
         </div>
         <div class="info-contain">
           <div class="icon-title">
-            <img src="archivos/svg/help_24-7.svg" alt="icon" />
+            <img src="assets/svg/help_24-7.svg" alt="icon" />
             <h1>Apoyo 24/7</h1>
           </div>
           <p>
@@ -95,7 +95,7 @@
       <div class="contain">
         <div class="info-contain">
           <div class="icon-title">
-            <img src="archivos/svg/marketing.svg" alt="icon" />
+            <img src="assets/svg/marketing.svg" alt="icon" />
             <h1>Marketing Deportivo</h1>
           </div>
           <p>
@@ -107,7 +107,7 @@
         </div>
         <div class="info-contain">
           <div class="icon-title">
-            <img src="archivos/svg/scouting.svg" alt="icon" />
+            <img src="assets/svg/scouting.svg" alt="icon" />
             <h1>Scouting</h1>
           </div>
           <p>
@@ -119,7 +119,7 @@
         </div>
         <div class="info-contain">
           <div class="icon-title">
-            <img src="archivos/svg/asistance_legal.svg" alt="icon" />
+            <img src="assets/svg/asistance_legal.svg" alt="icon" />
             <h1>Asistencia Legal</h1>
           </div>
           <p>
@@ -133,7 +133,7 @@
       <div class="contain">
         <div class="info-contain">
           <div class="icon-title">
-            <img src="archivos/svg/search_business.svg" alt="icon" />
+            <img src="assets/svg/search_business.svg" alt="icon" />
             <h1>Busqueda y Negociacion</h1>
           </div>
           <p>
@@ -150,24 +150,24 @@
       <div class="content-contact">
         <h1>CONTACT</h1>
         <br />
-        <p><img src="archivos/svg/mail.svg" alt="email" /> Example@email.com</p>
+        <p><img src="assets/svg/mail.svg" alt="email" /> Example@email.com</p>
         <br />
         <p>
-          <img src="archivos/svg/contact_phone.svg" alt="Phone" /> +1 23456789
+          <img src="assets/svg/contact_phone.svg" alt="Phone" /> +1 23456789
         </p>
       </div>
       <div class="content-ubi">
         <h1></h1>
         <div class="content-img">
-          <img src="archivos/imagenes/colombia.jpg" alt="img-ubi" />
+          <img src="assets/images/colombia.jpg" alt="img-ubi" />
           <p></p>
         </div>
         <div class="content-img">
-          <img src="archivos/imagenes/dallas.jpg" alt="img-ubi" />
+          <img src="assets/images/dallas.jpg" alt="img-ubi" />
           <p></p>
         </div>
         <div class="content-img">
-          <img src="archivos/imagenes/miami.jpg" alt="img-ubi" />
+          <img src="assets/images/miami.jpg" alt="img-ubi" />
           <p></p>
         </div>
       </div>
@@ -185,13 +185,13 @@
       </div>
       <div id="redes">
         <a href="instagram.com"
-          ><img src="archivos/logos_e_iconos/instagram2.png" alt="Instagram"
+          ><img src="assets/icons/instagram2.png" alt="Instagram"
         /></a>
         <a href="facebook.com"
-          ><img src="archivos/logos_e_iconos/linkedin2.png" alt="Facebook"
+          ><img src="assets/icons/linkedin2.png" alt="Facebook"
         /></a>
         <a href="whatsapp.com"
-          ><img src="archivos/logos_e_iconos/whatsapp2.png" alt="Whatsapp"
+          ><img src="assets/icons/whatsapp2.png" alt="Whatsapp"
         /></a>
       </div>
     </footer>
