Se hicieron cambios de diseño a todos los HTMl

--- a/IFM.html
+++ b/IFM.html
@@ -6,11 +6,12 @@
     <link rel="stylesheet" href="css/IFM/normalize.css" />
     <link rel="stylesheet" href="css/IFM/home.css" />
     <link rel="stylesheet" href="css/IFM/nav.css" />
-    <link rel="stylesheet" href="css/IFM/we.css" />
+    <link rel="stylesheet" href="css/IFM/info.css" />
     <link rel="stylesheet" href="css/IFM/services.css" />
     <link rel="stylesheet" href="css/IFM/footer.css" />
     <link rel="stylesheet" href="css/IFM/section.css" />
     <link rel="stylesheet" href="css/IFM/general.css" />
+    <link rel="stylesheet" href="css/IFM/contact.css">
     <link rel="icon" href="assets/icons/favicon.ico" />
     <script src="js/videos.js"></script>
     <script src="js/time-video.js"></script>
@@ -53,60 +54,42 @@
       </div>
     </header>
 
+    <section>
+      <h1>NUESTRO EQUIPO</h1>
+    </section>
     <main>
       <div id="contain-1">
+        <img src="assets/images/balon2.jpg" alt="image" />
         <div class="contain-text">
-          <h1>NOSOTROS</h1>
+          <h1>INNOV8</h1>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe,
             provident laboriosam est sed deserunt voluptate vitae temporibus vel
             mollitia? Dicta porro nemo veniam consequuntur eos asperiores quam
-            fugiat quod aliquam!
+            fugiat quod aliquam! Lorem ipsum dolor sit amet consectetur,
+            adipisicing elit. Saepe, provident laboriosam est sed deserunt
+            voluptate vitae temporibus vel mollitia? Dicta porro nemo veniam
+            consequuntur eos asperiores quam fugiat quod aliquam! Lorem ipsum
+            dolor sit amet consectetur, adipisicing elit. Saepe, provident
+            laboriosam est sed deserunt voluptate vitae temporibus vel mollitia?
+            Dicta porro nemo veniam consequuntur eos asperiores quam fugiat quod
+            aliquam! Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Saepe, provident laboriosam est sed deserunt voluptate vitae
+            temporibus vel mollitia? Dicta porro nemo veniam consequuntur eos
+            asperiores quam fugiat quod aliquam!
           </p>
         </div>
-        <div class="contain-box">
-          <div class="mini-contain-box">
-            <h1>Objetivo</h1>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
-              a repellat porro pariatur nesciunt maiores quis veritatis
-              repellendus velit. Porro, recusandae odio! Totam iure asperiores
-              expedita magni doloremque quisquam nisi!
-            </p>
-          </div>
-          <div class="mini-contain-box">
-            <h1>Valores</h1>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
-              iure quaerat inventore aperiam nulla sed itaque similique
-              laboriosam culpa nam quis non, soluta totam distinctio iste
-              possimus rem temporibus eaque.
-            </p>
-          </div>
-          <div class="mini-contain-box">
-            <h2>Quienes Somos</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
-              iure quaerat inventore aperiam nulla sed itaque similique
-              laboriosam culpa nam quis non, soluta totam distinctio iste
-              possimus rem temporibus eaque.
-            </p>
-          </div>
-        </div>
-      </div>
-      <div id="contain-2">
-        <img src="assets/images/balon2.jpg" alt="image" />
       </div>
     </main>
 
-    <section>
+    <!-- <section>
       <div class="container">
         <img src="assets/images/Real_Madrid.png" alt="image" />
         <img src="assets/images/FC_Barcelona.png" alt="image" />
         <img src="assets/images/Manchester_City_FC_badge.png" alt="image" />
         <img src="assets/images/Paris_Saint-Germain.png" alt="image" />
       </div>
-    </section>
+    </section> -->
 
     <article>
       <div class="contain">
@@ -201,6 +184,39 @@
       </div>
     </article>
 
+    <div class="section">
+      <div class="content-contact">
+        <h1>CONTACTO</h1>
+        <br />
+        <p>
+          <img src="assets/svg/mail.svg" alt="email" /> info@innovativegroup.com
+        </p>
+        <br />
+        <p>
+          <img src="assets/svg/contact_phone.svg" alt="Phone" /> +1 23456789
+        </p>
+      </div>
+      <div class="content-ubi">
+        <div class="title">
+          <h1>UBICACIONES</h1>
+        </div>
+        <div class="ubi">
+          <div class="content-img">
+            <img src="assets/images/colombia.jpg" alt="img-ubi" />
+            <h1>Medellin</h1>
+          </div>
+          <div class="content-img">
+            <img src="assets/images/dallas.jpg" alt="img-ubi" />
+            <h1>Dallas</h1>
+          </div>
+          <div class="content-img">
+            <img src="assets/images/miami.jpg" alt="img-ubi" />
+            <h1>Miami</h1>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <footer>
       <div class="contain">
         <p>Innovative Football Management</p>
@@ -213,13 +229,13 @@
       </div>
       <div id="redes">
         <a href="instagram.com"
-          ><img src="assets/icons/instagram.png" alt="Instagram"
+          ><img src="assets/icons/instagram2.png" alt="Instagram"
         /></a>
         <a href="facebook.com"
-          ><img src="assets/icons/facebook.png" alt="Facebook"
+          ><img src="assets/icons/linkedin2.png" alt="Facebook"
         /></a>
         <a href="whatsapp.com"
-          ><img src="assets/icons/whatsapp.png" alt="Whatsapp"
+          ><img src="assets/icons/whatsapp2.png" alt="Whatsapp"
         /></a>
       </div>
     </footer>
