--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="assets/images/instagram2.jpg" alt="imagen2" />
       </div>
       <div class="logo-contain">
-        <img src="assets/icons/ifmlogoia.png" alt="imagen-logo" />
+        <img src="assets/icons/ifmlogoia2.png" alt="imagen-logo" />
         <div class="buttoms">
           <a href="IFM.html">
             <span></span>
