--- a/innov8.html
+++ b/innov8.html
@@ -27,7 +27,7 @@
     </header>
 
     <section>
-      <h1>OUR TEAM</h1>
+      <h1>NUESTRO EQUIPO</h1>
     </section>
     <main>
       <div id="contain-1">
@@ -55,6 +55,9 @@
     </main>
 
     <article>
+      <div class="title">
+        <h1>NUESTROS SERVICIOS</h1>
+      </div>
       <div class="contain">
         <div class="info-contain">
           <div class="icon-title">
@@ -62,10 +65,8 @@
             <h1>Asesoría a Clubes</h1>
           </div>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-            reprehenderit pariatur, deserunt similique illum facilis, modi hic
-            eveniet doloremque, ratione quibusdam quia corrupti facere
-            consectetur obcaecati possimus. Id, minima molestias.
+            Innov8 se especializa en desarrollo de marca, asociaciones
+            estratégicas y gestión creativa.
           </p>
         </div>
         <div class="info-contain">
@@ -80,96 +81,38 @@
             consectetur obcaecati possimus. Id, minima molestias.
           </p>
         </div>
-        <div class="info-contain">
-          <div class="icon-title">
-            <img src="assets/svg/help_24-7.svg" alt="icon" />
-            <h1>Apoyo 24/7</h1>
-          </div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-            reprehenderit pariatur, deserunt similique illum facilis, modi hic
-            eveniet doloremque, ratione quibusdam quia corrupti facere
-            consectetur obcaecati possimus. Id, minima molestias.
-          </p>
-        </div>
-      </div>
-      <div class="contain">
-        <div class="info-contain">
-          <div class="icon-title">
-            <img src="assets/svg/marketing.svg" alt="icon" />
-            <h1>Marketing Deportivo</h1>
-          </div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-            reprehenderit pariatur, deserunt similique illum facilis, modi hic
-            eveniet doloremque, ratione quibusdam quia corrupti facere
-            consectetur obcaecati possimus. Id, minima molestias.
-          </p>
-        </div>
-        <div class="info-contain">
-          <div class="icon-title">
-            <img src="assets/svg/scouting.svg" alt="icon" />
-            <h1>Scouting</h1>
-          </div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-            reprehenderit pariatur, deserunt similique illum facilis, modi hic
-            eveniet doloremque, ratione quibusdam quia corrupti facere
-            consectetur obcaecati possimus. Id, minima molestias.
-          </p>
-        </div>
-        <div class="info-contain">
-          <div class="icon-title">
-            <img src="assets/svg/asistance_legal.svg" alt="icon" />
-            <h1>Asistencia Legal</h1>
-          </div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-            reprehenderit pariatur, deserunt similique illum facilis, modi hic
-            eveniet doloremque, ratione quibusdam quia corrupti facere
-            consectetur obcaecati possimus. Id, minima molestias.
-          </p>
-        </div>
-      </div>
-      <div class="contain">
-        <div class="info-contain">
-          <div class="icon-title">
-            <img src="assets/svg/search_business.svg" alt="icon" />
-            <h1>Busqueda y Negociacion</h1>
-          </div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-            reprehenderit pariatur, deserunt similique illum facilis, modi hic
-            eveniet doloremque, ratione quibusdam quia corrupti facere
-            consectetur obcaecati possimus. Id, minima molestias.
-          </p>
-        </div>
       </div>
     </article>
 
     <div class="section">
       <div class="content-contact">
-        <h1>CONTACT</h1>
+        <h1>CONTACTO</h1>
         <br />
-        <p><img src="assets/svg/mail.svg" alt="email" /> Example@email.com</p>
+        <p>
+          <img src="assets/svg/mail.svg" alt="email" /> info@innovativegroup.com
+        </p>
         <br />
         <p>
           <img src="assets/svg/contact_phone.svg" alt="Phone" /> +1 23456789
         </p>
       </div>
       <div class="content-ubi">
-        <h1></h1>
-        <div class="content-img">
-          <img src="assets/images/colombia.jpg" alt="img-ubi" />
-          <p></p>
+        <div class="title">
+          <h1>UBICACIONES</h1>
         </div>
-        <div class="content-img">
-          <img src="assets/images/dallas.jpg" alt="img-ubi" />
-          <p></p>
-        </div>
-        <div class="content-img">
-          <img src="assets/images/miami.jpg" alt="img-ubi" />
-          <p></p>
+        <div class="ubi">
+          <div class="content-img">
+            <img src="assets/images/colombia.jpg" alt="img-ubi" />
+            <h1>Medellin</h1>
+          </div>
+          <div class="content-img">
+            <img src="assets/images/dallas.jpg" alt="img-ubi" />
+            <h1>Dallas</h1>
+          </div>
+          <div class="content-img">
+            <img src="assets/images/miami.jpg" alt="img-ubi" />
+            <h1>Miami</h1>
+          </div>
         </div>
       </div>
     </div>
