Diseño temporal del index

--- a/index.html
+++ b/index.html
@@ -6,32 +6,55 @@
     <link rel="stylesheet" href="css/index/normalize.css" />
     <link rel="stylesheet" href="css/index/main.css" />
     <link rel="stylesheet" href="css/index/general.css" />
+    <link rel="stylesheet" href="css/index/article.css" />
+
     <title>Innovative</title>
   </head>
   <body>
+    <!-- <article>
+      <div class="position-left"></div>
+      <div class="position-right"></div>
+    </article> -->
     <main>
       <div class="image-contain">
         <img src="assets/images/instagram1.jpg" alt="imagen1" />
         <img src="assets/images/instagram2.jpg" alt="imagen2" />
       </div>
+
+      <div id="position-left">
+        <a href="">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          INTRODUCCION</a
+        >
+      </div>
+
+      <div id="sidePanel" class="hidden">
+        <p>Contenido de la ventana desplegable</p>
+      </div>
+
+      <script src="js/test.js"></script>
+
       <div class="logo-contain">
         <img src="assets/icons/ifmlogoia2.png" alt="imagen-logo" />
         <div class="buttoms">
-          <a href="IFM.html">
+          <a href="IFM.html" id="desing-ifm">
             <span></span>
             <span></span>
             <span></span>
             <span></span>
             Descubre IFM</a
           >
-          <a href="innov8.html">
+          <a href="innov8.html" id="desing-innov8">
             <span></span>
             <span></span>
             <span></span>
             <span></span>
             Explora Innov8</a
           >
-          <a href="olimpia.html">
+          <a href="olimpia.html" id="desing-olimpia">
             <span></span>
             <span></span>
             <span></span>
@@ -39,6 +62,16 @@
             Conoce C.D. Olimpia</a
           >
         </div>
+      </div>
+
+      <div id="position-right">
+        <a href="">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          SOBRE NOSOTROS</a
+        >
       </div>
     </main>
   </body>
