Se hicieron modificaciones totales de diseño en IFM e Innov8

--- a/index.html
+++ b/index.html
@@ -21,21 +21,46 @@
         <img src="assets/images/instagram2.jpg" alt="imagen2" />
       </div>
 
-      <div id="position-left">
-        <a href="">
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-          INTRODUCCION</a
-        >
-      </div>
+      <button id="position-left">INTRODUCCION</button>
+      <button id="position-right">SOBRE NOSOTROS</button>
 
+      <div id="overlay" class="hidden"></div>
+      
       <div id="sidePanel" class="hidden">
-        <p>Contenido de la ventana desplegable</p>
+        <h1 style="color: #1f4e79">Acerca de Nosotros</h1>
+        <br />
+        Innovative Group es un holding dedicado a ofrecer un ecosistema refinado
+        para nuestros clientes. Apoyamos y potenciamos carreras en deportes,
+        entretenimiento, cultura y negocios a través de nuestras divisiones
+        especializadas."<br /><br />
+        <a href="" style="display: flex; width: 100%; justify-content: end"
+          ><img src="assets/svg/arrow_forward.svg" alt="Back"
+        /></a>
       </div>
 
-      <script src="js/test.js"></script>
+      <div id="sidePanel2" class="hidden">
+        <h1 style="color: #1f4e79">Objetivo</h1>
+        <br />
+        Innovative Group se dedica a proporcionar soluciones innovadoras en
+        deportes, entretenimiento, cultura y negocios. Nuestra misión es apoyar
+        y potenciar las carreras de nuestros clientes a través de servicios
+        personalizados y excelencia operativa.
+        <br /><br />
+        <h2 style="color: #255784">Visión:</h2>
+        Ser líderes en la gestión integral de talentos
+        deportivos/entretenimiento y estrategias de marketing innovadoras.
+        <br /><br />
+        <h2 style="color: #255784">Misión:</h2>
+        Apoyar a nuestros clientes en cada etapa de su carrera con soluciones
+        innovadoras y personalizadas.
+        <br /><br />
+        <h2 style="color: #255784">Valores:</h2>
+        Innovación, Profesionalismo, Integridad, Compromiso.
+        <br /><br />
+        <a href=""><img src="assets/svg/arrow_back.svg" alt="Back" /></a>
+      </div>
+
+      <script src="js/cards.js"></script>
 
       <div class="logo-contain">
         <img src="assets/icons/ifmlogoia2.png" alt="imagen-logo" />
@@ -62,16 +87,6 @@
             Conoce C.D. Olimpia</a
           >
         </div>
-      </div>
-
-      <div id="position-right">
-        <a href="">
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-          SOBRE NOSOTROS</a
-        >
       </div>
     </main>
   </body>
