--- a/innov8.html
+++ b/innov8.html
@@ -17,6 +17,11 @@
     <title>Innov8</title>
   </head>
   <body>
+    <div class="back">
+      <a href="index.html"
+        ><img src="assets/svg/arrow_back.svg" alt="Back"
+      /></a>
+    </div>
     <nav id="navbar">
       <div class="logo">
         <img src="assets/icons/logoExample.png" alt="logoExample" />
@@ -82,15 +87,15 @@
         </div>
         <div class="ubi">
           <div class="content-img">
-            <img src="assets/images/medellin.jpg" alt="img-ubi" id="colombia"/>
+            <img src="assets/images/medellin.jpg" alt="img-ubi" id="colombia" />
             <h2>Medellin</h2>
           </div>
           <div class="content-img">
-            <img src="assets/images/dallas.jpg" alt="img-ubi" id="eeuu"/>
+            <img src="assets/images/dallas.jpg" alt="img-ubi" id="eeuu" />
             <h2>Dallas</h2>
           </div>
           <div class="content-img">
-            <img src="assets/images/miami.jpg" alt="img-ubi" id="eeuu"/>
+            <img src="assets/images/miami.jpg" alt="img-ubi" id="eeuu" />
             <h2>Miami</h2>
           </div>
         </div>
