--- a/IFM.html
+++ b/IFM.html
@@ -7,34 +7,39 @@
     <link rel="stylesheet" href="css/IFM/home.css" />
     <link rel="stylesheet" href="css/IFM/nav.css" />
     <link rel="stylesheet" href="css/IFM/info.css" />
-    <link rel="stylesheet" href="css/IFM/services.css" />
+    <link rel="stylesheet" href="css/IFM/article.css" />
     <link rel="stylesheet" href="css/IFM/footer.css" />
     <link rel="stylesheet" href="css/IFM/section.css" />
     <link rel="stylesheet" href="css/IFM/general.css" />
-    <link rel="stylesheet" href="css/IFM/contact.css">
+    <link rel="stylesheet" href="css/IFM/contact.css" />
     <link rel="icon" href="assets/icons/favicon.ico" />
     <script src="js/videos.js"></script>
     <script src="js/time-video.js"></script>
+    <script src="js/scroll.js"></script>
     <title>Innovative Football Management</title>
   </head>
   <body>
-    <nav>
-      <div id="contain-1">
-        <img src="assets/icons/escudo.png" alt="logo" id="logonormal" />
-        <img
-          src="assets/icons/IFM_Nombre.png"
-          alt="logo-nombre"
-          id="logonombre"
-        />
+    <div class="back">
+      <a href="index.html"
+        ><img src="assets/svg/arrow_back.svg" alt="Back"
+      /></a>
+    </div>
+
+    <nav id="navbar">
+      <div class="logo">
+        <img src="assets/icons/escudo.png" alt="logoExample" />
+        <img src="assets/icons/IFM_Nombre.png" alt="" />
       </div>
-      <div id="contain-2">
-        <div class="botones"><a href="#">Inicio</a></div>
-        <div class="botones"><a href="#">Sobre Nosotros</a></div>
-        <div class="botones"><a href="#">Divisiones</a></div>
-        <div class="botones"><a href="#">Noticias</a></div>
-        <div class="botones"><a href="#">Contacto</a></div>
+      <div class="botones">
+        <a href="index.html">Innovate</a>
+        <span></span>
+        <a href="#home">Home</a>
+        <span></span>
+        <a href="#our-services">Companny</a>
+        <span></span>
+        <a href="#contact">Contact</a>
+        <span></span>
       </div>
-      <div id="contain-1"></div>
     </nav>
     <header>
       <div class="contain">
@@ -43,40 +48,29 @@
       <div class="contain">
         <video id="video2" src="assets/videos/gol2.mp4" muted></video>
       </div>
-      <div class="contain">
-        <video id="video3" src="assets/videos/gol3.mp4" muted></video>
-      </div>
-      <div class="contain">
-        <video id="video4" src="assets/videos/gol4.mp4" muted></video>
-      </div>
       <div class="contain-img">
         <img src="assets/icons/IFM_NoStars.png" alt="Logo Principal" />
       </div>
     </header>
 
-    <section>
-      <h1>NUESTRO EQUIPO</h1>
-    </section>
+    <section></section>
     <main>
       <div id="contain-1">
         <img src="assets/images/balon2.jpg" alt="image" />
         <div class="contain-text">
-          <h1>INNOV8</h1>
+          <h1>Innovative Football Management (IFM)</h1>
+          <br />
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe,
-            provident laboriosam est sed deserunt voluptate vitae temporibus vel
-            mollitia? Dicta porro nemo veniam consequuntur eos asperiores quam
-            fugiat quod aliquam! Lorem ipsum dolor sit amet consectetur,
-            adipisicing elit. Saepe, provident laboriosam est sed deserunt
-            voluptate vitae temporibus vel mollitia? Dicta porro nemo veniam
-            consequuntur eos asperiores quam fugiat quod aliquam! Lorem ipsum
-            dolor sit amet consectetur, adipisicing elit. Saepe, provident
-            laboriosam est sed deserunt voluptate vitae temporibus vel mollitia?
-            Dicta porro nemo veniam consequuntur eos asperiores quam fugiat quod
-            aliquam! Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-            Saepe, provident laboriosam est sed deserunt voluptate vitae
-            temporibus vel mollitia? Dicta porro nemo veniam consequuntur eos
-            asperiores quam fugiat quod aliquam!
+            Innovative Football Management (IFM) se dedica a ofrecer una
+            representación integral para atletas profesionales, abarcando todos
+            los aspectos necesarios para asegurar su éxito y bienestar. Nuestros
+            servicios incluyen una gestión experta en marketing, asesoría legal
+            y financiera, permitiendo a los deportistas centrarse en su
+            rendimiento mientras nosotros nos encargamos del resto. Con un
+            equipo de profesionales altamente capacitados, IFM se compromete a
+            proporcionar un apoyo personalizado y estratégico, garantizando que
+            cada atleta alcance su máximo potencial tanto dentro como fuera del
+            campo.
           </p>
         </div>
       </div>
@@ -94,92 +88,50 @@
     <article>
       <div class="contain">
         <div class="info-contain">
-          <div class="icon-title">
-            <img src="assets/svg/club.svg" alt="icon" />
-            <h1>Asesoría a Clubes</h1>
+          <div class="icon">
+            <img src="assets/images/beige.jpg" alt="Cliente" />
           </div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-            reprehenderit pariatur, deserunt similique illum facilis, modi hic
-            eveniet doloremque, ratione quibusdam quia corrupti facere
-            consectetur obcaecati possimus. Id, minima molestias.
-          </p>
+          <div class="title">
+            <h1>Edier Ocampo - Futbolista profesional</h1>
+            <p>
+              Gracias a IFM, he logrado avanzar mi carrera y seguir cumpliendo
+              mis metas.
+            </p>
+            <br />
+            <p>July 21, 2024</p>
+          </div>
         </div>
         <div class="info-contain">
-          <div class="icon-title">
-            <img src="assets/svg/player.svg" alt="icon" />
-            <h1>Promoción de Jugador</h1>
+          <div class="icon">
+            <img src="assets/images/beige.jpg" alt="Cliente" />
           </div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-            reprehenderit pariatur, deserunt similique illum facilis, modi hic
-            eveniet doloremque, ratione quibusdam quia corrupti facere
-            consectetur obcaecati possimus. Id, minima molestias.
-          </p>
+          <div class="title">
+            <h1>Javier Pérez - Futbolista profesional</h1>
+            <p>
+              IFM me proporcionó la plataforma perfecta para mostrar mi talento.
+              Su equipo siempre estuvo ahí para asesorarme y apoyarme en cada
+              paso del camino. Hoy, juego en una de las ligas más competitivas
+              del mundo, y no podría haberlo hecho sin ellos.
+            </p>
+            <br />
+            <p>July 21, 2024</p>
+          </div>
         </div>
         <div class="info-contain">
-          <div class="icon-title">
-            <img src="assets/svg/help_24-7.svg" alt="icon" />
-            <h1>Apoyo 24/7</h1>
+          <div class="icon">
+            <img src="assets/images/beige.jpg" alt="Cliente" />
           </div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-            reprehenderit pariatur, deserunt similique illum facilis, modi hic
-            eveniet doloremque, ratione quibusdam quia corrupti facere
-            consectetur obcaecati possimus. Id, minima molestias.
-          </p>
-        </div>
-      </div>
-      <div class="contain">
-        <div class="info-contain">
-          <div class="icon-title">
-            <img src="assets/svg/marketing.svg" alt="icon" />
-            <h1>Marketing Deportivo</h1>
+          <div class="title">
+            <h1>Carlos Rivas - Futbolista profesional</h1>
+            <p>
+              El apoyo integral que recibí de IFM fue fundamental para mi éxito.
+              Gracias a su gestión de marketing, mi perfil ha crecido
+              exponencialmente, y ahora soy un referente tanto dentro como fuera
+              del campo.
+            </p>
+            <br />
+            <p>July 21, 2024</p>
           </div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-            reprehenderit pariatur, deserunt similique illum facilis, modi hic
-            eveniet doloremque, ratione quibusdam quia corrupti facere
-            consectetur obcaecati possimus. Id, minima molestias.
-          </p>
-        </div>
-        <div class="info-contain">
-          <div class="icon-title">
-            <img src="assets/svg/scouting.svg" alt="icon" />
-            <h1>Scouting</h1>
-          </div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-            reprehenderit pariatur, deserunt similique illum facilis, modi hic
-            eveniet doloremque, ratione quibusdam quia corrupti facere
-            consectetur obcaecati possimus. Id, minima molestias.
-          </p>
-        </div>
-        <div class="info-contain">
-          <div class="icon-title">
-            <img src="assets/svg/asistance_legal.svg" alt="icon" />
-            <h1>Asistencia Legal</h1>
-          </div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-            reprehenderit pariatur, deserunt similique illum facilis, modi hic
-            eveniet doloremque, ratione quibusdam quia corrupti facere
-            consectetur obcaecati possimus. Id, minima molestias.
-          </p>
-        </div>
-      </div>
-      <div class="contain">
-        <div class="info-contain">
-          <div class="icon-title">
-            <img src="assets/svg/search_business.svg" alt="icon" />
-            <h1>Busqueda y Negociacion</h1>
-          </div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-            reprehenderit pariatur, deserunt similique illum facilis, modi hic
-            eveniet doloremque, ratione quibusdam quia corrupti facere
-            consectetur obcaecati possimus. Id, minima molestias.
-          </p>
         </div>
       </div>
     </article>
@@ -202,16 +154,16 @@
         </div>
         <div class="ubi">
           <div class="content-img">
-            <img src="assets/images/colombia.jpg" alt="img-ubi" />
-            <h1>Medellin</h1>
+            <img src="assets/images/medellin.jpg" alt="img-ubi" id="colombia" />
+            <h2>Medellin</h2>
           </div>
           <div class="content-img">
-            <img src="assets/images/dallas.jpg" alt="img-ubi" />
-            <h1>Dallas</h1>
+            <img src="assets/images/dallas.jpg" alt="img-ubi" id="eeuu" />
+            <h2>Dallas</h2>
           </div>
           <div class="content-img">
-            <img src="assets/images/miami.jpg" alt="img-ubi" />
-            <h1>Miami</h1>
+            <img src="assets/images/miami.jpg" alt="img-ubi" id="eeuu" />
+            <h2>Miami</h2>
           </div>
         </div>
       </div>
